@@ -181,7 +181,7 @@ As defined by the Language Server Protocol 3.16."
      lsp-fsharp lsp-gdscript lsp-gleam lsp-glsl lsp-go lsp-golangci-lint lsp-grammarly
      lsp-graphql lsp-groovy lsp-hack lsp-haskell lsp-haxe lsp-idris lsp-java
      lsp-javascript lsp-jq lsp-json lsp-kotlin lsp-latex lsp-lisp lsp-ltex
-     lsp-lua lsp-magik lsp-markdown lsp-marksman lsp-mdx lsp-meson lsp-metals lsp-mint
+     lsp-lua lsp-fennel lsp-magik lsp-markdown lsp-marksman lsp-mdx lsp-meson lsp-metals lsp-mint
      lsp-mojo lsp-move lsp-mssql lsp-nginx lsp-nim lsp-nix lsp-nushell lsp-ocaml
      lsp-openscad lsp-pascal lsp-perl lsp-perlnavigator lsp-php lsp-pls
      lsp-purescript lsp-pwsh lsp-pyls lsp-pylsp lsp-pyright lsp-python-ms
@@ -785,6 +785,7 @@ Changes take effect only when a new session is started."
     ("\\.jsonnet$" . "jsonnet")
     ("\\.jsx$" . "javascriptreact")
     ("\\.lua$" . "lua")
+    ("\\.fnl$" . "fennel")
     ("\\.mdx\\'" . "mdx")
     ("\\.nu$" . "nushell")
     ("\\.php$" . "php")
